Update footer to copyright notice

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
   </div>
 
   <footer>
-    <p>A Plus Dental · aplusdental.ca</p>
+    <p>&copy; 2026 A Plus Dental. All rights reserved.</p>
   </footer>
 
   <script>
